--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "─꯭─⃝‌‌Najmul ok🥵",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100001039692046",
+        "61582711423584",
         "100001039692046",
         "100001039692046"
     ],
